# norse_text_analytics

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: Hávamál1.json
docs/: glossary.md  ids-and-references.md  index.md  invariants.md  query-acceptance-tests.md  schema.md  vision.md
docs/contributing/: commit-conventions.md
docs/data-model/: etymology.md  language-scope.md  language-stages.md  philosophy.md
docs/dev-logs/: dev-log_2026-02-22_sprint-1_graph-spine-and-first-ingest.md
docs/ingest/: adapter-contract.md  auto-structuring.md  havamal-source-notes.md  ingest-overview.md  plaintext-adapter.md  raw-source-and-adapters.md
docs/prompts/: 2026-02-22.md
docs/queries/: analysis-versioning.md  branching.md  morphology.md  query-cookbook.md  word-lineage.md
docs/roadmaps/: norse-text-analysis_stabilization-todo.md
docs/tutorials/: ingest-new-text.md
docs/vision/: serious-play.md
nta/: __init__.py
nta/graph/: __init__.py  db.py  repo.py  schema.cypher
nta/ingest/: __init__.py  pipeline.py  text.py
nta/ingest/adapters/: __init__.py  base.py
nta/model/: __init__.py  ids.py  types.py
scripts/: align_demo.py  apply_schema.py  ingest_havamal_json.py  ingest_plaintext.py  report_inflections.py  seed_norway_example.py
tests/: test_ids_deterministic.py  test_text_v0.py
