[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "norse_text_analytics"
version = "0.0.0"
description = "Norse text analytics tools and graph ingestion."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nta*"]
